localdev/ngrok/envoy.yaml
admin:
  access_log_path: /dev/null
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 9901

static_resources:
  listeners:
    - name: http_listener
      address:
        socket_address:
          address: 0.0.0.0
          port_value: 8080
      filter_chains:
        - filters:
            - name: envoy.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                stat_prefix: ingress_http
                codec_type: auto
                route_config:
                  name: local_route
                  virtual_hosts:
                    - name: kubechecks_host
                      domains:
                        - "*"
                      routes:
                        - match:
                            prefix: "/kubechecks/"
                          route:
                            cluster: kubechecks_cluster
                            timeout: 20s
                        - match:
                            prefix: "/kubechecks"
                          route:
                            cluster: kubechecks_cluster
                            timeout: 20s
                        - match:
                            prefix: "/argocd/"
                          route:
                            cluster: argocd_cluster
                            timeout: 20s
                        - match:
                            prefix: "/argocd"
                          route:
                            cluster: argocd_cluster
                            timeout: 20s
                http_filters:
                  - name: envoy.router
                access_log:
                  - name: envoy.file_access_log
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.access_loggers.file.v3.FileAccessLog
                      path: "/dev/stdout"
                      log_format:
                        text_format_source:
                          inline_string: '%START_TIME% %REQ(:METHOD)% %REQ(X-ENVOY-ORIGINAL-PATH?:PATH)% %PROTOCOL% %RESPONSE_CODE% %RESPONSE_FLAGS% %DURATION% %UPSTREAM_HOST%\n'
  clusters:
    - name: kubechecks_cluster
      connect_timeout: 0.25s
      type: STRICT_DNS
      lb_policy: ROUND_ROBIN
#      http2_protocol_options: {}
      load_assignment:
        cluster_name: kubechecks_cluster
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: kubechecks
                      port_value: 8080
      outlier_detection:
        consecutive_5xx: 1
        interval: 10s
        base_ejection_time: 30s
        max_ejection_percent: 100
    - name: argocd_cluster
      connect_timeout: 0.25s
      type: STRICT_DNS
      lb_policy: ROUND_ROBIN
#      http2_protocol_options: {}
      load_assignment:
        cluster_name: argocd_cluster
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: argocd-server
                      port_value: 443
      transport_socket:
        name: envoy.transport_sockets.tls
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.UpstreamTlsContext
#          sni: example.com
          common_tls_context:
            tls_certificates:
              - certificate_chain:
                  filename: /etc/envoy/tls.crt
                private_key:
                  filename: /etc/envoy/tls.key
#            validation_context:
#              trusted_ca:
#                filename: /path/to/ca.pem
      outlier_detection:
        consecutive_5xx: 1
        interval: 10s
        base_ejection_time: 30s
        max_ejection_percent: 100
